--- a/HW1/HW1.tex
+++ b/HW1/HW1.tex
@@ -23,7 +23,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%% Page Setting %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \geometry{letterpaper,left=0.5in,right=0.5in,top=0.5in,bottom=0.5in}
 \linespread{1.15}
-
+\setlength{\footskip}{25pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Title & Author %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{\underline{\textbf{Homework 1}}}
 \author{Bishoy Abdelmalik}
