added part of 6

--- a/HW1/HW1.tex
+++ b/HW1/HW1.tex
@@ -78,6 +78,9 @@ LookupServer 104ms
         \item \textbf{youtube.com} 9 hops
         \item \textbf{www.cs.vu.nl} 27 hops
     \end{enumerate}
-    \item 
+    \item \begin{enumerate}
+        \item[]
+        \item[Packet \#1:] 
+    \end{enumerate}
 \end{enumerate}
 \end{document}
